[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", features = ["compress-gzip", "compress-brotli"] }
actix-rt = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "gzip", "brotli"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
once_cell = "1"
url = "2"
urlencoding = "2"
regex = "1"
serde_json = "1"
dotenvy = "0.15"
base64 = "0.22"
num_cpus = "1"
bytes = "1"
mini-moka = "0.10"
serde = { version = "1.0.228", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
